# CHANGELOG

## 27-11-2024

- Removed old files from WIP
- Add section 4.1's notes, tests and exercises
- Started CHANGELOG
- Added `switch` statement notes - todo exercise
- Added [LESSONS](Resources/LESSONS.md)