@@ -4,14 +4,31 @@ Tracking lessons for the course
 
 ## Chapter 2
 
-- [ ] **Section 1 - Variables and Data Types**
-- [ ] **Section 2 - User Input**
-- [ ] **Section 3 - Operations**
-- [ ] **Section 4 - Control Flow**
+#### **Section 1 - Variables and Data Types**
+
+---
+#### **Section 2 - User Input**
+
+---
+#### **Section 3 - Operations**
+
+---
+#### **Section 4 - Control Flow**
+
   - [x] Section 4.1 - If-Else Statements
   - [ ] Section 4.2 - Switch Statements
   - [ ] Section 4.3 - Loops
-- [ ] **Section 5 - Functions**
+
+---
+#### **Project 1: Calculator**
+
+  - [ ] Project Overview
+  - [ ] Project Submission
+  - [ ] Project Review + Feedback
+
+---
+#### **Section 5 - Functions**
+
   - [ ] Section 5.1 - Simple Declaration
   - [ ] Section 5.2 - Return Value
     - [ ] Section 5.2.1 - Single Return Value
@@ -23,15 +40,27 @@ Tracking lessons for the course
     - [ ] Section 5.4.2 - Variadic Functions
   - [ ] Section 5.5 - Init & Main Function
   - [ ] Section 5.6 - Defer
-- [ ] **Section 6 - Modules**
+
+---
+#### **Section 6 - Modules**
+
   - [ ] Section 6.1 - Introduction
   - [ ] Section 6.2 - Packages
   - [ ] Section 6.3 - External Packages (Dependencies)
-- [ ] **Section 7 - Organization**
-- [ ] **Section 8 - Error Handling**
+
+---
+#### **Section 7 - Organization**
+
+---
+#### **Section 8 - Error Handling**
+
   - [ ] Section 8.1 - Errors
   - [ ] Section 8.2 - Handling Errors
-- [ ] **Section 9 - Additional Information**
+
+---
+#### **Section 9 - Additional Information**
+
   - [ ] Section 9.1 - Useful Commands
   - [ ] Section 9.2 - Build
   - [ ] Section 9.3 - Testing
+---
